# Relict

./: .env.example  .gitignore  .googledriveignore  CITATION.cff  LICENSE  README.md  index.html  package-lock.json  package.json  render.yaml  tailwind.config.ts  vite.config.ts
.github/workflows/: codeql.yml
backend/: .env.example  .gitignore  Dockerfile.worker  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  exports.py  health.py  jobs.py  results.py  samples.py  ws.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py  models.py  session.py
backend/app/db/migrations/versions/: 20260412_1200_0001_initial_schema.py
backend/app/schemas/: auth.py  conservation.py  jobs.py  provenance.py  results.py  samples.py
backend/app/services/: auth.py  dwca.py  jobs.py  queue.py  report.py  samples.py  storage.py
backend/scripts/: benchmark.py  download_references.py
backend/tests/: README.md  conftest.py
backend/tests/integration/: conftest.py  test_auth_service.py
backend/tests/unit/: test_config.py  test_health_endpoint.py  test_models.py  test_schemas.py  test_security.py  test_storage_filename.py
backend/worker/: __init__.py  main.py
backend/worker/pipeline/: __init__.py  conservation.py  denoise_vsearch.py  dereplicate.py  diversity.py  ordination.py  provenance.py  qc.py  run_job.py  taxonomy.py
docs/: API_KEYS.md  ARCHITECTURE.md  DATASETS.md  MASTER_PLAN.md  RESEARCH_PAPER_PLAN.md
docs/benchmarks/: benchmark_report.md  benchmark_results.json
docs/paper/: relict_paper.md  relict_paper.tex
src/: App.css  App.tsx  index.css
src/components/: ApiDocumentation.tsx  BioNetworkBackground.tsx  BiodiversityBadge.tsx  BiodiversityCharts.tsx  BiodiversityMetrics.tsx  CredibilitySection.tsx  CustomCursor.tsx  DemoUpload.tsx  Footer.tsx  Header.tsx  HeroSection.tsx  HowItWorksSection.tsx  ImpactSection.tsx  RegionSelector.tsx  TeamSection.tsx  ThemeProvider.tsx  ThemeToggle.tsx  UseCasesSection.tsx
src/hooks/: use-auth.ts
src/lib/: api.ts
src/pages/: About.tsx  ApiDocs.tsx  Demo.tsx  Impact.tsx  Index.tsx  JobResults.tsx  NotFound.tsx  Profile.tsx  Visualize.tsx
