[project]
name = "relict"
version = "0.1.0"
description = "Reproducible environmental DNA analysis platform with conservation cross-referencing and signed provenance"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Shaurya Punj" }]
keywords = [
    "environmental-dna",
    "eDNA",
    "metabarcoding",
    "bioinformatics",
    "biodiversity",
    "conservation",
    "reproducible-research",
]

dependencies = [
    # ─── Web framework ──────────────────────────────────────────────
    "fastapi==0.138.0",
    "uvicorn[standard]==0.49.0",
    "python-multipart>=0.0.27",         # multipart/form-data uploads — CVE chain in <0.0.27
    "websockets==14.2",                  # for FastAPI WebSocket

    # ─── Configuration & validation ─────────────────────────────────
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "email-validator==2.3.0",

    # ─── Database (async) ───────────────────────────────────────────
    "sqlalchemy[asyncio]==2.0.51",
    "asyncpg==0.31.0",                   # async Postgres driver
    "alembic==1.18.4",
    "psycopg[binary]==3.3.4",            # sync driver for Alembic

    # ─── Object storage (S3 / MinIO) ────────────────────────────────
    "minio==7.2.20",

    # ─── Job queue ──────────────────────────────────────────────────
    "redis==5.3.1",
    "rq==2.10.0",

    # ─── Security ───────────────────────────────────────────────────
    "argon2-cffi==23.1.0",               # argon2id password hashing
    "pyjwt>=2.12.0",                     # auth-bypass via unknown `crit` header in <2.12.0
    "cryptography>=46.0.6",              # SECT subgroup-attack chain in <46.0.6

    # ─── Logging & observability ────────────────────────────────────
    "structlog==24.4.0",

    # ─── HTTP client (for external APIs in later phases) ────────────
    "httpx==0.28.1",
    "tenacity==9.1.4",                   # retry with backoff
]

[project.optional-dependencies]
dev = [
    # ─── Test ───────────────────────────────────────────────────────
    "pytest>=9.0.3",
    "pytest-asyncio==0.26.0",
    "pytest-cov==6.3.0",
    "pytest-mock==3.15.1",
    "httpx==0.28.1",                      # also used by TestClient
    "testcontainers[postgres,redis,minio]==4.14.2",
    "faker==33.3.1",                      # only for test fixtures — never for prod data

    # ─── Lint / type / format ───────────────────────────────────────
    "ruff==0.15.18",
    "mypy==1.20.2",
    "types-redis==4.6.0.20241004",
]

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "worker*"]

# ──────────────────────────────────────────────────────────────────────
#  Quality gates — enforced in CI from Phase 1h onward.
# ──────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "worker", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # bugbear
    "A",    # flake8-builtins
    "C4",   # comprehensions
    "DTZ",  # datetime (require timezone)
    "S",    # security (bandit-style)
    "SIM",  # simplify
    "TCH",  # type-checking blocks
    "RET",  # return statements
    "PLR",  # pylint refactor
    "ASYNC",# async best practices
]
ignore = [
    "E501",    # line length — handled by formatter, not blocker
    "PLR0913", # too many arguments (FastAPI routes need them)
    "PLR0912", # too many branches — some stage orchestrators need them
    "PLR2004", # magic-value comparisons are fine in tests and config
    "S101",    # use of assert — fine in tests

    # --- TYPE_CHECKING migration rules ---
    # SQLAlchemy's Mapped[...] annotations and Pydantic's model_rebuild()
    # both resolve annotations at runtime via typing.get_type_hints(), so
    # moving uuid / datetime / collections.abc into TYPE_CHECKING breaks them.
    # Keep these off globally — it's simpler and safer than whitelisting.
    "TC001",
    "TC002",
    "TC003",

    # --- Naming rules we intentionally override ---
    # N811: `PgUUID`, `PgEnum`, `JSONB` are PascalCase aliases for SQLAlchemy
    # dialect types. Renaming to SCREAMING_SNAKE_CASE loses readability.
    "N811",
    # N818: our exception classes (EmptySample, InvalidCredentials, etc.) are
    # already unambiguously named. Appending `Error` to every one of them
    # would add noise without adding information.
    "N818",
    # A005: `app.services.queue` shadows the stdlib `queue` module, but we
    # always import via `app.services.queue`, never bare `queue`, so there's
    # no real ambiguity.
    "A005",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "PLR2004"]
"app/db/migrations/**" = ["N806", "N999"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_decorators = false      # FastAPI route decorators
plugins = ["pydantic.mypy"]
exclude = [
    "app/db/migrations/",                 # Alembic auto-generated
    "build/",
    "dist/",
    ".venv/",
]

[[tool.mypy.overrides]]
module = ["minio.*", "rq.*", "testcontainers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--cov=app",
    "--cov=worker",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=75",
]
markers = [
    "integration: tests that spin up real Postgres/Redis/MinIO via testcontainers",
    "slow: tests that take > 5s",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:passlib.*",
]

[tool.coverage.run]
branch = true
source = ["app", "worker"]
omit = [
    "app/db/migrations/*",
    "*/__init__.py",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
